<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/addressSearch"
        android:layout_above="@+id/searchButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#F7F7F7"
        android:padding="15dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:typeface="sans"
        android:textSize="20sp"
        android:textColor="#333333"
        android:hint="@string/search_hint"
        android:textColorHint="#333333"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_button_value"
        android:id="@+id/searchButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#12890E"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="30sp"
        android:padding="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/intro_title"
        android:id="@+id/introTitleTextView"
        android:background="#046791"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="32sp"
        android:padding="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:typeface="serif"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/intro_description"
        android:id="@+id/introDiscriptionTextView"
        android:layout_below="@+id/introTitleTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/white"
        android:background="#046791"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textStyle="normal"
        android:typeface="sans"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/intro_search_label"
        android:id="@+id/introSearchLabelTextView"
        android:textColor="#333"
        android:textStyle="bold"
        android:layout_above="@+id/addressSearch"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="20dp"/>

</RelativeLayout>
